# forebay

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Forebay.sln  PHASE_0_SUMMARY.md  README.md  demo.sh  package-lock.json  package.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: context.md
.claude/rules/: idlergear.md
.idlergear/: config.toml
.idlergear/issues/: 001-test-github-integration.md  002-implement-google-oauth-login-flow-in-cli.md  003-implement-worker-authentication-endpoints.md  004-add-token-management-commands.md  005-set-up-google-cloud-oauth-client.md  006-create-worker-viability-test-harness-project.md  007-implement-typescript-test-worker.md  008-implement-rust-test-worker.md  009-implement-python-test-worker.md  010-build-automated-deployment-script.md  011-build-automated-benchmark-suite.md  012-build-comparison-report-generator.md  013-run-phase-0-deployment-and-benchmarks.md  014-design-worker-rest-api-specification.md  015-set-up-rust-worker-project-structure.md  016-set-up-c-client-project-structure.md  017-implement-rust-worker-authentication-endpoints.md  018-implement-rust-worker-queue-endpoints.md  019-implement-c-client-authentication.md  020-implement-c-client-queue-operations.md  (+51 more)
.idlergear/notes/: 001.md  (+34 more)
apps/: test-shared-storage.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: bump-version.sh  test-all.sh
worker/: Cargo.toml  wrangler.toml
worker-viability-tests/: README.md  RESULTS.md  RESULTS_FINAL.md
worker/src/: auth.rs  error.rs  lib.rs  models.rs  queue.rs  storage.rs
(+61 files in other folders)
